add publisher rest
