# base-go-gin-training/docs/swagger.yaml
@@ -67,6 +67,29 @@ definitions:
     - fullname
     - gender
     type: object
+  dto.PublisherCreateReq:
+    properties:
+      city:
+        maxLength: 32
+        minLength: 2
+        type: string
+      name:
+        maxLength: 48
+        minLength: 6
+        type: string
+    required:
+    - city
+    - name
+    type: object
+  dto.PublisherCreateResp:
+    properties:
+      city:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   dto.SuccessResponse-any:
     properties:
       data: {}
@@ -112,6 +135,16 @@ definitions:
     properties:
       data:
         $ref: '#/definitions/dto.PersonDetailResp'
+      message:
+        type: string
+      success:
+        example: true
+        type: boolean
+    type: object
+  dto.SuccessResponse-dto_PublisherCreateResp:
+    properties:
+      data:
+        $ref: '#/definitions/dto.PublisherCreateResp'
       message:
         type: string
       success:
@@ -308,6 +341,40 @@ paths:
       security:
       - BearerAuth: []
       summary: Update a person's detail
+  /publishers:
+    post:
+      consumes:
+      - application/json
+      description: Create new Publisher
+      parameters:
+      - description: Publisher's detail
+        in: body
+        name: newItem
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PublisherCreateReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.SuccessResponse-dto_PublisherCreateResp'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Create new Publisher
 securityDefinitions:
   BearerAuth:
     description: Bearer auth containing JWT
